# DLL_Class_impl

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: Person.hpp  Person_impl.hxx
lib/: CMakeLists.txt  Person.cpp  Person_impl.cxx
